--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,8 +1,28 @@
 {
   "compilerOptions": {
-    "baseUrl": ".",
-    "paths": {
-      "@/*": ["./*"]
-    }
+      "baseUrl": "src",
+      "paths": {
+          "@pages/*": [
+              "pages/*"
+          ],
+          "@components/*": [
+              "components/*"
+          ],
+          "@containers/*": [
+              "containers/*"
+          ],
+          "@icons/*": [
+              "assets/icons/*"
+          ],
+          "@logos/*": [
+              "assets/logos/*"
+          ],
+          "@context/*": [
+              "context/*"
+          ],
+          "@styles/*": [
+              "styles/*"
+          ],
+      }
   }
 }
