--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "13.1.5",
+    "axios": "^1.3.4",
     "eslint": "8.32.0",
     "eslint-config-next": "^13.1.5",
     "eslint-config-prettier": "^8.6.0",
@@ -18,6 +19,7 @@
     "next": "13.1.5",
     "prettier": "^2.8.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sass": "^1.58.3"
   }
 }
